After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747967 - backends/x11: fix scroll button setting
backends/x11: fix scroll button setting
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-04-16 07:53 UTC by Ondrej Holy
Modified: 2015-04-17 09:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
backends/x11: Fix set_scroll_button (963 bytes, patch)
2015-04-16 07:53 UTC, Ondrej Holy
committed Details | Review

Description Ondrej Holy 2015-04-16 07:53:42 UTC
Created attachment 301692 [details] [review]
backends/x11: Fix set_scroll_button

When I investigated backend codes I realized there is copy&pasted code in set_scroll_button, which is apparently wrong, because it is trying to set scroll method instead of scroll button...
Comment 1 Jonas Ådahl 2015-04-16 08:44:23 UTC
Review of attachment 301692 [details] [review]:

Looks correct to me (with nit, as I've been told: commit messages should always have both a subject and a body).
Comment 2 Ondrej Holy 2015-04-17 09:08:26 UTC
Comment on attachment 301692 [details] [review]
backends/x11: Fix set_scroll_button

Thanks for the review, the commit message was amended and the patch was pushed to master:
commit 3561b46fc6458c196921e2d1da31f6194bd33128

and gnome-3-16:
commit c99da71e96513b65744bfa75e3bae71afe42f3a7